# GigaChatHack

./: app.py  docker-compose.yml  main.py  pyproject.toml  test.markdown
.docker/nginx/: nginx.conf
configs/: Environment.py
routing/v1/: ml.py
schemas/: ml.py
