[tool.poetry]
name = "OSSGigaChat"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-03-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
pytest = "^7.4.0"
httpx = "^0.25.2"
gigachain = "^0.0.343"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
